# PhenoContracts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE-APACHE  README.md  SSOT.md  STATUS.md  Taskfile.yml  audit_scorecard.json  biome.json  deny.toml  justfile  llms.txt  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release-attestation.yml  scorecard.yml
coverage/: coverage-summary.json  index.html
coverage/ports/: contract_verifier.ts.html  index.html
coverage/ports/adapters/: coq.ts.html  index.html  kani.ts.html  prusti.ts.html
docs/boundary/: PhenoContracts.md
docs/governance/: background_agent_policy.md
docs/intent/: PhenoContracts.md
docs/security/: THREAT_MODEL.md
findings/: 71-pillar-2026-06-20-PhenoContracts.md
ports/: contract_verifier.ts  diagnostics.ts  diagnostics_cli.ts  health.ts  index.ts  logger.ts  registry.ts  validation.ts
ports/adapters/: coq.ts  kani.ts  prusti.ts
ports/tests/: contract_verifier.test.ts  diagnostics.test.ts  health.test.ts  logger.test.ts  validation.test.ts
ports/tests/bench/: contract_verifier.bench.ts
ports/tests/property/: contract_verifier.property.test.ts
rust/: Cargo.toml
rust/crates/phenotype-contracts/: Cargo.toml
rust/crates/phenotype-contracts/benches/: verdict_serde.rs
rust/crates/phenotype-contracts/src/: lib.rs
rust/crates/phenotype-contracts/tests/: property.rs
rust/crates/phenotype-port-interfaces/: Cargo.toml
rust/crates/phenotype-port-interfaces/src/: lib.rs
rust/crates/phenotype-port-traits/: Cargo.toml
rust/crates/phenotype-port-traits/src/: lib.rs
