[workspace]
resolver = "2"
members = [
    "crates/phenotype-contracts",
    "crates/phenotype-port-interfaces",
    "crates/phenotype-port-traits",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
description = "Hexagonal port contracts for formal verification adapters in the Phenotype ecosystem"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/KooshaPari/PhenoContracts"
documentation = "https://docs.rs/phenotype-contracts"
keywords = ["phenotype", "pheno-contracts", "formal-verification", "kani", "prusti"]
categories = ["development-tools", "rust-patterns"]
authors = ["kooshapari"]

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
