[package]
name = "phenotype-contracts"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Phenotype Rust adapter contracts (canonical Rust side of the PhenoContracts port bundle)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoContracts"
documentation = "https://docs.rs/phenotype-contracts"
keywords = ["phenotype", "pheno-contracts", "contract"]
categories = ["development-tools"]
authors = ["kooshapari"]

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "verdict_serde"
harness = false
